MODIFICADO PARA DEPOSITO

--- a/Deposito/src/app/pages/compartido/footer/footer.component.scss
+++ b/Deposito/src/app/pages/compartido/footer/footer.component.scss
@@ -1,8 +1,11 @@
 footer {
     color: white;
     width: 100%;
-    background-color: 
-    #06608d;
+    background-color: #6976bd;
     min-height: 250px;
     padding: 10px 0px 25px 0px;
+}
+img{
+    height: 75%;
+    width: 20%;
 }
