--- a/Deposito/src/app/pages/compartido/login/login.component.scss
+++ b/Deposito/src/app/pages/compartido/login/login.component.scss
@@ -7,7 +7,8 @@
   }
   
   .ads {
-    background-color: rgb(105, 118, 189);
+    background-color:#2A9FD6;
+    //background-color: rgb(105, 118, 189);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     color: #fff;
@@ -16,15 +17,17 @@
   }
   
   .ads h1 {
-    margin-top: 20%;
+    margin-top: 0%;
   }
   
   #fl {
     font-weight: 600;
+    color: black !important;
   }
   
   #sl {
     font-weight: 100 !important;
+    color:black !important;
   }
   
   .profile-img {
@@ -61,5 +64,8 @@
     font-weight: 500;
     text-decoration: none;
     font-size: 14px;
+  }
+  #sesion{
+    color: black;
   }
   
