--- a/Deposito/src/styles.scss
+++ b/Deposito/src/styles.scss
@@ -1,1 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/pages/compartido/sidebar/variables';
+.main-panel {
+    position: relative;
+    float: right;
+    width: $sidebar-width;
+    color: black;
+    // width: 100%;
+    background-color: $light-gray;
+    background-color: #E8FFFF !important;
+  
+    //@include transition (0.50s, cubic-bezier(0.685, 0.0473, 0.346, 1));
+  
+    .main-content {
+      padding: 0 30px 30px;
+      min-height: calc(100vh - 123px);
+      margin-top: -30px;
+    }
+}
+body{
+    background-color: #E8FFFF !important;
+}
+table{
+    color: black !important;
+}
+span{
+    color: black !important;
+}
+
+#h1sidebar{
+    color: #0A043C;
+    text-align: center !important;
+    font-family: Arial, Helvetica, sans-serif;
+    text-shadow: 0.1em 0.1em 0.2em #333;
+}
+#tr {
+    background-color: #D7E9F7 !important;
+}
+#footer{
+    background-color: #6976bd;
+    color: crimson;
+}
+#logopolicia{
+    height: 100% !important;
+    width: 80% !important;
+    
+}
+.modal-content{
+    background-color: #D7E9F7 !important;
+    
+}
+.modal-title{
+    color: black;
+}
+// .alert-primary {
+//     background-color: #6976bd !important;
+// }
+.btn-primary {
+    background-color: #7c83fd !important;
+    border-color: #FFF8E5;
+}
