se creo tipor de equipamiento

--- a/Deposito/src/app/pages/lst/tipo-equipamiento/tipo-equipamiento.component.html
+++ b/Deposito/src/app/pages/lst/tipo-equipamiento/tipo-equipamiento.component.html
@@ -15,8 +15,8 @@
             <!-- *ngFor="let item of items" -->
             <tr >
                 <td scope="row">{{marca}} </td>
-                <td scope="row">{{modelo}} </td>
-                <td scope="row"> {{tipoEquipamiento}} </td>
+                <td> {{modelo}} </td>
+                <td> {{tipoEquipamiento}} </td>
                 <!-- <td scope="row">{{item.id}} </td> -->
                 <!-- <td>{{ item.norDni }}</td> -->
                 <!-- <td>{{ item.apellido }}</td> -->
