--- a/Deposito/src/app/pages/compartido/nav/nav.component.html
+++ b/Deposito/src/app/pages/compartido/nav/nav.component.html
@@ -6,7 +6,7 @@
   <a
     class="btn btn-outline-dark navbar-brand"
     id="log"
-    [routerLink]="['/pages']"
+    [routerLink]="['/principal']"
     >Taller Web</a
   >
   <button
