--- a/Deposito/src/app/pages/compartido/login/login.component.html
+++ b/Deposito/src/app/pages/compartido/login/login.component.html
@@ -30,7 +30,7 @@
                         <img src="assets/img/laureles2.png" alt="profile_img" height="170px" width="170px">
                     </div>
                 </div>
-                <h1><span id="fl">Policía </span><span id="sl">Chaco</span></h1>
+                <h1><span id="fl">Policía</span>&nbsp;<span id="fl">Chaco</span></h1>
                 <p>DPTO. COMUNICACIONES E INFORMATICA </p>
                 <img src="assets/img/logopol.png" alt="profile_img" height="150px" width="150px;">
                 <br>
