--- a/Deposito/src/app/pages/frm-abm/abm-marca/abm-marca.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-marca/abm-marca.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <form #f="ngForm" (ngSubmit)="accion(f)" ngNativeValidate class="was-validated">
-            <input required type="text" name="">
+            <input required type="text" name="" placeholder="Ingrese ">
             </form>
     </div>
 </div>
