--- a/Deposito/src/app/pages/compartido/sidebar/sidebar.component.html
+++ b/Deposito/src/app/pages/compartido/sidebar/sidebar.component.html
@@ -37,7 +37,7 @@
     <div class="row">
       <div class="col-md-3"></div>
       <div align="center" class="col-md-6">
-        <img id="logopolicia" src="./assets/img/logopolicia.png" />
+        <img id="logopolicia" src="./assets/img/logocom.png" />
       </div>
       <div class="col-md-3"></div>
     </div>
