modificado abm-proveedor

--- a/Deposito/src/app/pages/lst/lst-proveedor/lst-proveedor.component.html
+++ b/Deposito/src/app/pages/lst/lst-proveedor/lst-proveedor.component.html
@@ -81,7 +81,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Abm Marca</h5>
+            <h5 class="modal-title">Abm Proveedor</h5>
             <button
               type="button"
               class="close"
@@ -93,7 +93,7 @@
           </div>
           <div class="modal-body">
             
-                <app-abm-marca (finalizado)="evento($event)"></app-abm-marca>
+                <app-abm-proveedor (finalizado)="evento($event)"></app-abm-proveedor>
               
           </div>
           <div class="modal-footer">
