--- a/Deposito/src/app/pages/lst/lst-marca/lst-marca.component.html
+++ b/Deposito/src/app/pages/lst/lst-marca/lst-marca.component.html
@@ -35,9 +35,9 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td scope="row">{{ id }}</td>
-                <td>{{ marca }}</td>
+              <tr *ngFor="let item of items">
+                <td scope="row">{{ item.id }}</td>
+                <td>{{ item.nombre }}</td>
                 <td>
                   
                   <button
