--- a/Deposito/src/app/pages/lst/lst-tipoequipamiento/lst-tipoequipamiento.component.html
+++ b/Deposito/src/app/pages/lst/lst-tipoequipamiento/lst-tipoequipamiento.component.html
@@ -83,7 +83,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Abm Proveedor</h5>
+            <h5 class="modal-title">Abm tipo equipamiento</h5>
             <button
               type="button"
               class="close"
@@ -93,8 +93,8 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-              
+          <div class="modal-body">  
+          <app-abm-tipo-equipamiento (finalizado)="evento($event)"></app-abm-tipo-equipamiento>
             </div>
           <div class="modal-footer">
             <!-- #close hace referencia desde el ts a la vista para cerrrar el formulario -->
