--- a/Deposito/src/app/pages/frm-abm/abm-tipo-equipamiento/abm-tipo-equipamiento.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-tipo-equipamiento/abm-tipo-equipamiento.component.html
@@ -1,7 +1,7 @@
 <form #f="ngForm" (ngSubmit)="accion(f)" ngNativeValidate class="was-validated">
     <div class="row">
-      <div class="form-group col-md-6">
-        <label for="title">Nombre de marca</label>
+      <div class="form-group col-md-12">
+        <label for="title">Agregue tipo de equipo</label>
         <input
           class="form-control"
           type="text"
@@ -10,17 +10,17 @@
           minlength="4"
           id="nombre"
           name="nombre"
-          placeholder="Ingrese nombre de la marca"
+          placeholder="Ingrese tipo de equipo"
           [(ngModel)]="item.nombre"
           required
         
           />
       </div>
-      <div class="form-group col-md-6">
+      <!-- <div class="form-group col-md-6">
         <app-combo-tipoequipamiento
         [dibujar]="item.modelo"
         (emity)="seleccionoMarca($event)"></app-combo-tipoequipamiento>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-md-12">
