--- a/Deposito/src/app/pages/frm-abm/abm-proveedor/abm-proveedor.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-proveedor/abm-proveedor.component.html
@@ -85,7 +85,7 @@
       />
     </div>
     <div class="form-group col-md-6">
-      <label for="title">Correo</label>
+      <label for="title">Correo electrónico</label>
       <input
         class="form-control"
         type="text"
