--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -96,8 +96,7 @@
             </button>
           </div>
           <div class="modal-body">
-            
-                <app-abm-marca (finalizado)="evento($event)"></app-abm-marca>
+              <app-abm-equipo (finalizado)="evento($event)"></app-abm-equipo>
               
           </div>
           <div class="modal-footer">
