--- a/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
@@ -1,19 +1,18 @@
 <form #f="ngForm" (ngSubmit)="accion(f)" ngNativeValidate class="was-validated">
     <div class="row">
-      <div class="form-group col-md-12">
-        <label for="title">Nombre de marca</label>
+      <div class="form-group col-md-6">
+        <label for="title">Identificación Policial</label>
         <input
           class="form-control"
           type="text"
           oninvalid="setCustomValidity('El campo es obligatorio')"
           oninput="setCustomValidity('')"
           minlength="4"
-          id="nombre"
-          name="nombre"
-          placeholder="Ingrese nombre de la marca"
-          [(ngModel)]="item.nombre"
+          id="idPolicial"
+          name="idPolicial"
+          placeholder="Ingrese Id. policial"
+          [(ngModel)]="item.idPolicial"
           required
-        
           />
       </div>
     </div>
