--- a/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
@@ -37,7 +37,7 @@
     <div class="form-group col-md-6">
       <label for="title">Tipo adquisición</label>
       <select
-      class="form-control"
+        class="form-control"
         data-style="btn-primary"
         oninvalid="setCustomValidity('El campo es obligatorio')"
         oninput="setCustomValidity('')"
@@ -68,12 +68,14 @@
   </div>
 
   <div class="row">
+    <!-- Proveedor -->
     <div class="col-lg-6">
       <app-combo-proveedor
         [dibujar]="item.proveedor"
         (emity)="seleccionProveedor($event)"
       ></app-combo-proveedor>
     </div>
+    <!-- Garantía -->
     <div class="form-group col-md-6">
       <label for="title">Garantía</label>
       <input
@@ -84,19 +86,21 @@
         min="0"
         id="garantia"
         name="garantia"
-        placeholder="Ingrese garantia"
+        placeholder="Garantía del equipo"
         [(ngModel)]="item.garantia"
         required
       />
     </div>
   </div>
   <div class="row">
+    <!-- combo estado -->
     <div class="col-lg-6">
       <app-combo-estado
         [dibujar]="item.estado"
         (emity)="seleccionestado($event)"
       ></app-combo-estado>
     </div>
+    <!-- combo modelo equipo -->
     <div class="col-lg-6">
       <app-combo-modelo-equipo
         [dibujar]="item.modelo"
@@ -104,6 +108,48 @@
       ></app-combo-modelo-equipo>
     </div>
   </div>
+  <div class="row">
+    <!-- situacion -->
+    <div class="form-group col-md-6">
+      <label for="title">Situación</label>
+      <select
+        class="form-control"
+        data-style="btn-primary"
+        oninvalid="setCustomValidity('El campo es obligatorio')"
+        oninput="setCustomValidity('')"
+        [(ngModel)]="item.situacion"
+        name="situacion"
+        id="situacion"
+        required
+      >
+        <!-- <option selected>Seleccione una opción</option> -->
+        <option value="A asignar">A ASIGNAR</option>
+        <option value="Reasignar">REASIGNAR</option>
+        <option value="Asignado">ASIGNADO</option>
+      </select>
+    </div>
+    <div class="form-group col-lg-6">
+      <app-combo-tipo-equipo
+        [dibujar]="item.tipoEquipo"
+        (emity)="selecciontipoEquipo($event)"
+      ></app-combo-tipo-equipo>
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-md-12">
+      <div class="form-floating">
+        <label for="floatingTextarea">Observaciones</label>
+        <textarea
+          [(ngModel)]="item.observacion"
+          class="form-control"
+          name="observacion"
+          placeholder="Observaciones del equipo"
+          id="observacion"
+        ></textarea>
+      </div>
+    </div>
+  </div>
+  <br>
   <div class="row">
     <div class="col-md-12">
       <button type="submit" class="btn btn-primary">Guardar</button>
