--- a/Deposito/src/app/pages/frm-abm/abm-marca/abm-marca.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-marca/abm-marca.component.html
@@ -1,25 +1,29 @@
-<form #f="ngForm" (ngSubmit)="accion(f)" ngNativeValidate class="was-validated">
-  <div class="row">
-    <div class="form-group col-md-12">
-      <label for="title">Nombre de marca</label>
-      <input
-        class="form-control"
-        type="text"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        minlength="2"
-        id="nombre"
-        name="nombre"
-        placeholder="Ingrese nombre de la marca"
-        [(ngModel)]="item.nombre"
-        required
-      
-        />
-    </div>
+<div class="row">
+  <div class="col-md-12">
+      <form #f="ngForm" (ngSubmit)="doAction(f)" ngNativeValidate class="was-validated">
+          <div class="form-group">
+              <label for="title">Rol</label>
+              <input type="text" class="form-control" id="nombre" name="nombre" placeholder="ingrese nombre"
+                  [(ngModel)]="item.nombre" required />
+          </div>
+          <div class="form-group">
+              <button type="submit" [disabled]="procesando" name="btn"
+                  class="btn btn-primary btn-lg btn-block float-left">
+                  Aceptar
+                  <i class="fa fa-spinner fa-spin" *ngIf="procesando" aria-hidden="true"></i>
+              </button>
+              &nbsp;
+              <a (click)="back()" #cerrar class="btn btn-info btn-lg btn-block">
+                  <i class="fas fa-arrow-left"></i> Volver
+              </a>
+              <ng-container *ngIf="id>0;then boton ">
+              </ng-container>
+              <ng-template #boton>
+
+              </ng-template>
+
+          </div>
+      </form>
+
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <button type="submit" class="btn btn-primary">Guardar</button>
-    </div>
-  </div>
-</form>
+</div>
