--- a/Deposito/src/app/pages/lst/lst-marca/lst-marca.component.html
+++ b/Deposito/src/app/pages/lst/lst-marca/lst-marca.component.html
@@ -1,107 +1,63 @@
-<div class="container">
-  <div class="row">
-      <div class="col-md-12">
-        <h3>
-            {{ entity }}&nbsp;
-            <a
-              class="btn btn-primary btn-lg"
-              data-toggle="modal"
-              data-target="#modelId"
-            >
+<div class="card border-info">
+  <div class="card-body">
+      <div class="card-header">
+          Listado de {{ entity }}
+          &nbsp;
+          <!--             show-delay="10" data-toggle="modal" data-target="#modelId"
+-->
+          <a title="Agregar Nuevo" placement="right" (click)="linkear(0)" class="btn btn-primary btn-redondo">
               <i class="fa fa-plus" aria-hidden="true"></i>
-            </a>
-          </h3>
+          </a>
       </div>
-  </div>
-    
-  <!-- Button trigger modal -->
-  <!-- <button
-    type="button"
-    class="btn btn-primary btn-lg"
-    data-toggle="modal"
-    data-target="#modelId"
-  >
-    Launch
-  </button> -->
 
-  <div class="row text-center">
-      <div class="col-md-12">
-        <table class="table">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Marca</th>
-                <th>Acción</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of items">
-                <td scope="row">{{ item.id }}</td>
-                <td>{{ item.nombre }}</td>
-                <td>
-                  
-                  <button
-                    type="button"
-                    title="Modificar"
-                    placement="top"
-                    show-delay="10"
-                    class="btn btn-secondary btn-sm"
-                  >
-                    <i class="fas fa-edit"></i>
-                  </button>
-                  &nbsp;
-                  <button
-                    type="button"
-                    title="Eliminar"
-                    placement="top"
-                    show-delay="10"
-                    class="btn btn-danger btn-sm"
-                  >
-                    <i class="fas fa-trash"></i>
-                  </button>
-                </td>
-              </tr>
-            </tbody>
+      <app-fil-marca (filter)="doFound($event)">
+      </app-fil-marca>
+
+      <div class="row table-responsive">
+          <table class="table table-striped table-inverse">
+              <thead class="thead-inverse">
+                  <tr>
+                      <!-- <th>id</th> -->
+                      <th>Nombre</th>
+                      <th>Acción</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr *ngFor="let item of items">
+                      <!-- <td scope="row">{{item.id}} </td> -->
+                      <td>{{ item.nombre }}</td>
+                      <td>
+                          <button type="button" title="Modificar" placement="top" show-delay="10"
+                              (click)="linkear(item.id)" class="btn btn-secondary btn-sm">
+                              <i class="fas fa-edit"></i>
+                          </button>
+                          &nbsp;
+                          <button type="button" title="Eliminar" placement="top" show-delay="10"
+                              (click)="preDelete(item)" class="btn btn-danger btn-sm">
+                              <i class="fas fa-trash"></i>
+                          </button>
+                      </td>
+                  </tr>
+              </tbody>
           </table>
       </div>
   </div>
-  
-  <br />
+</div>
 
-  <!-- Modal -->
-  <div
-    class="modal fade"
-    id="modelId"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="modelTitleId"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog" role="document">
+
+<!-- Modal -->
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+  <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Abm Marca</h5>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          
-              <app-abm-marca (finalizado)="evento($event)"></app-abm-marca>
-            
-        </div>
-        <div class="modal-footer">
-          <!-- #close hace referencia desde el ts a la vista para cerrrar el formulario -->
-          <button #close type="button" class="btn btn-secondary" data-dismiss="modal">
-            Salir
-          </button>
-        </div>
+          <div class="modal-header">
+              <h5 class="modal-title">Alta {{entity}}</h5>
+              <button #close type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <app-abm-marca (finalizado)="evento($event)" (cancelado)="setResultCancel($event)"></app-abm-marca>
+          </div>
       </div>
-    </div>
   </div>
 </div>
