--- a/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
@@ -1,158 +1,180 @@
-<form #f="ngForm" (ngSubmit)="accion(f)" ngNativeValidate class="was-validated">
-  <div class="row">
-    <!-- identificacion policial -->
-    <div class="form-group col-md-6">
-      <label for="title">Identificación Policial</label>
-      <input
-        class="form-control"
-        type="text"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        minlength="4"
-        id="idPolicial"
-        name="idPolicial"
-        placeholder="Ingrese Id. policial"
-        [(ngModel)]="item.idPolicial"
-      />
-    </div>
-    <!-- numero serie -->
-    <div class="form-group col-md-6">
-      <label for="title">Número Serie</label>
-      <input
-        class="form-control"
-        type="text"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        minlength="4"
-        id="nroSerie"
-        name="nroSerie"
-        placeholder="Ingrese serie"
-        [(ngModel)]="item.nroSerie"
-        required
-      />
-    </div>
-  </div>
-  <div class="row">
-    <!-- select tipo alta -->
-    <div class="form-group col-md-6">
-      <label for="title">Tipo adquisición</label>
-      <select
-        class="form-control"
-        data-style="btn-primary"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        [(ngModel)]="item.tipoAlta"
-        name="tipoAlta"
-        id="tipoAlta"
-        required
-      >
-        <option value="Adquisición Policial">Adquisición Policial</option>
-        <option value="Donación">Donación</option>
-        <option value="Secuestro">Secuestro</option>
-      </select>
-    </div>
-    <!-- fecha alta equipo -->
-    <div class="form-group col-md-6">
-      <label for="title">Fecha alta equipo</label>
-      <input
-        class="form-control"
-        type="date"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        id="fechaAlta"
-        name="fechaAlta"
-        [(ngModel)]="item.fechaAlta"
-        required
-      />
-    </div>
-  </div>
+<div class="row">
+  <div class="col-md-12">
+      <h2><b>ABM Equipo</b></h2>
+      <form #f="ngForm" (ngSubmit)="doAction(f)" ngNativeValidate class="was-validated">
+        <hr>  
+        <div class="row">
+          <!-- identificacion policial -->
+          <div class="form-group col-md-6">
+            <label for="title">Identificación Policial</label>
+            <input
+              class="form-control"
+              type="text"
+              oninvalid="setCustomValidity('El campo es obligatorio')"
+              oninput="setCustomValidity('')"
+              minlength="4"
+              id="idPolicial"
+              name="idPolicial"
+              placeholder="Ingrese Id. policial"
+              [(ngModel)]="item.idPolicial"
+            />
+          </div>
+          <!-- numero serie -->
+          <div class="form-group col-md-6">
+            <label for="title">Número Serie</label>
+            <input
+              class="form-control"
+              type="text"
+              oninvalid="setCustomValidity('El campo es obligatorio')"
+              oninput="setCustomValidity('')"
+              minlength="4"
+              id="nroSerie"
+              name="nroSerie"
+              placeholder="Ingrese serie"
+              [(ngModel)]="item.nroSerie"
+              required
+            />
+          </div>
+        </div>
+        <div class="row">
+          <!-- select tipo alta -->
+          <div class="form-group col-md-6">
+            <label for="title">Tipo adquisición</label>
+            <select
+              class="form-control"
+              data-style="btn-primary"
+              oninvalid="setCustomValidity('El campo es obligatorio')"
+              oninput="setCustomValidity('')"
+              [(ngModel)]="item.tipoAlta"
+              name="tipoAlta"
+              id="tipoAlta"
+              required
+            >
+              <option value="Adquisición Policial">Adquisición Policial</option>
+              <option value="Donación">Donación</option>
+              <option value="Secuestro">Secuestro</option>
+            </select>
+          </div>
+          <!-- fecha alta equipo -->
+          <div class="form-group col-md-6">
+            <label for="title">Fecha alta equipo</label>
+            <input
+              class="form-control"
+              type="date"
+              oninvalid="setCustomValidity('El campo es obligatorio')"
+              oninput="setCustomValidity('')"
+              id="fechaAlta"
+              name="fechaAlta"
+              [(ngModel)]="item.fechaAlta"
+              required
+            />
+          </div>
+        </div>
+      
+        <div class="row">
+          <!-- Proveedor -->
+          <div class="col-lg-6">
+            <app-combo-proveedor
+              [dibujar]="item.proveedor"
+              (emity)="seleccionProveedor($event)"
+            ></app-combo-proveedor>
+          </div>
+          <!-- Garantía -->
+          <div class="form-group col-md-6">
+            <label for="title">Garantía</label>
+            <input
+              class="form-control"
+              type="number"
+              oninvalid="setCustomValidity('El campo es obligatorio')"
+              oninput="setCustomValidity('')"
+              min="0"
+              id="garantia"
+              name="garantia"
+              placeholder="Garantía del equipo"
+              [(ngModel)]="item.garantia"
+              required
+            />
+          </div>
+        </div>
+        <div class="row">
+          <!-- combo estado -->
+          <div class="col-lg-6">
+            <app-combo-estado
+              [dibujar]="item.estado"
+              (emity)="seleccionestado($event)"
+            ></app-combo-estado>
+          </div>
+          <!-- combo modelo equipo -->
+          <div class="col-lg-6">
+            <app-combo-modelo-equipo
+              [dibujar]="item.modelo"
+              (emity)="seleccionmodelo($event)"
+            ></app-combo-modelo-equipo>
+          </div>
+        </div>
+        <div class="row">
+          <!-- situacion -->
+          <div class="form-group col-md-6">
+            <label for="title">Situación</label>
+            <select
+              class="form-control"
+              data-style="btn-primary"
+              oninvalid="setCustomValidity('El campo es obligatorio')"
+              oninput="setCustomValidity('')"
+              [(ngModel)]="item.situacion"
+              name="situacion"
+              id="situacion"
+              required
+            >
+              <!-- <option selected>Seleccione una opción</option> -->
+              <option value="A asignar">A ASIGNAR</option>
+              <option value="Reasignar">REASIGNAR</option>
+              <option value="Asignado">ASIGNADO</option>
+            </select>
+          </div>
+          <!-- tipo equipo -->
+          <div class="form-group col-lg-6">
+            <app-combo-tipo-equipo
+              [dibujar]="item.tipoEquipo"
+              (emity)="selecciontipoEquipo($event)"
+            ></app-combo-tipo-equipo>
+          </div>
+        </div>
+        <div class="row">
+            <!-- Observaciones -->
+          <div class="form-group col-md-12">
+            <div class="form-floating">
+              <label for="floatingTextarea">Observaciones</label>
+              <textarea
+                [(ngModel)]="item.observacion"
+                class="form-control"
+                name="observacion"
+                placeholder="Observaciones del equipo"
+                id="observacion"
+              ></textarea>
+            </div>
+          </div>
+        </div>
+      
+          <hr>
+          <div class="form-group">
+              <button type="submit" [disabled]="procesando" name="btn"
+                  class="btn btn-primary btn-lg btn-block float-left">
+                  Aceptar
+                  <i class="fa fa-spinner fa-spin" *ngIf="procesando" aria-hidden="true"></i>
+              </button>
+              &nbsp;
+              <a (click)="back()" #cerrar class="btn btn-info btn-lg btn-block">
+                  <i class="fas fa-arrow-left"></i> Volver
+              </a>
+              <ng-container *ngIf="id>0;then boton ">
+              </ng-container>
+              <ng-template #boton>
 
-  <div class="row">
-    <!-- Proveedor -->
-    <div class="col-lg-6">
-      <app-combo-proveedor
-        [dibujar]="item.proveedor"
-        (emity)="seleccionProveedor($event)"
-      ></app-combo-proveedor>
-    </div>
-    <!-- Garantía -->
-    <div class="form-group col-md-6">
-      <label for="title">Garantía</label>
-      <input
-        class="form-control"
-        type="number"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        min="0"
-        id="garantia"
-        name="garantia"
-        placeholder="Garantía del equipo"
-        [(ngModel)]="item.garantia"
-        required
-      />
-    </div>
+              </ng-template>
+
+          </div>
+      </form>
+
   </div>
-  <div class="row">
-    <!-- combo estado -->
-    <div class="col-lg-6">
-      <app-combo-estado
-        [dibujar]="item.estado"
-        (emity)="seleccionestado($event)"
-      ></app-combo-estado>
-    </div>
-    <!-- combo modelo equipo -->
-    <div class="col-lg-6">
-      <app-combo-modelo-equipo
-        [dibujar]="item.modelo"
-        (emity)="seleccionmodelo($event)"
-      ></app-combo-modelo-equipo>
-    </div>
-  </div>
-  <div class="row">
-    <!-- situacion -->
-    <div class="form-group col-md-6">
-      <label for="title">Situación</label>
-      <select
-        class="form-control"
-        data-style="btn-primary"
-        oninvalid="setCustomValidity('El campo es obligatorio')"
-        oninput="setCustomValidity('')"
-        [(ngModel)]="item.situacion"
-        name="situacion"
-        id="situacion"
-        required
-      >
-        <!-- <option selected>Seleccione una opción</option> -->
-        <option value="A asignar">A ASIGNAR</option>
-        <option value="Reasignar">REASIGNAR</option>
-        <option value="Asignado">ASIGNADO</option>
-      </select>
-    </div>
-    <div class="form-group col-lg-6">
-      <app-combo-tipo-equipo
-        [dibujar]="item.tipoEquipo"
-        (emity)="selecciontipoEquipo($event)"
-      ></app-combo-tipo-equipo>
-    </div>
-  </div>
-  <div class="row">
-    <div class="form-group col-md-12">
-      <div class="form-floating">
-        <label for="floatingTextarea">Observaciones</label>
-        <textarea
-          [(ngModel)]="item.observacion"
-          class="form-control"
-          name="observacion"
-          placeholder="Observaciones del equipo"
-          id="observacion"
-        ></textarea>
-      </div>
-    </div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="col-md-12">
-      <button type="submit" class="btn btn-primary">Guardar</button>
-    </div>
-  </div>
-</form>
+</div>
