--- a/Deposito/src/app/pages/lst/lst-tipo-equipo/lst-tipo-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-tipo-equipo/lst-tipo-equipo.component.html
@@ -10,8 +10,8 @@
             </a>
         </div>
   
-        <app-fil-modelo (filter)="doFound($event)">
-        </app-fil-modelo>
+        <app-fil-tipo-equipo (filter)="doFound($event)">
+        </app-fil-tipo-equipo>
   
         <div class="row table-responsive">
             <table class="table table-striped table-inverse">
