--- a/Deposito/src/app/pages/frm-abm/abm-proveedor/abm-proveedor.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-proveedor/abm-proveedor.component.html
@@ -127,18 +127,16 @@
               <button type="submit" [disabled]="procesando" name="btn"
                   class="btn btn-primary btn-lg btn-block float-left">
                   Aceptar
-                  <i class="fa fa-spinner fa-spin" *ngIf="procesando" aria-hidden="true"></i>
+                  <ng-container *ngIf="getProceso();then mostrar" ></ng-container>
+                  <ng-template #mostrar>
+                    <i class="fa fa-spinner fa-spin"  aria-hidden="true"></i>
+                  </ng-template>
+                  
               </button>
               &nbsp;
               <a (click)="back()" #cerrar class="btn btn-info btn-lg btn-block">
                   <i class="fas fa-arrow-left"></i> Volver
               </a>
-              <ng-container *ngIf="id>0;then boton ">
-              </ng-container>
-              <ng-template #boton>
-
-              </ng-template>
-
           </div>
       </form>
 
